--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
 <%= render @user %>
 
 <div>
+  <p><%= @user.microposts.first && @user.microposts.first.content %></p>
   <%= link_to "Edit this user", edit_user_path(@user) %> |
   <%= link_to "Back to users", users_path %>
 
